<resources>
    <string name="app_name">Tp2</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="hello">"Hello "</string>
    <string name="settings">Settings</string>
    <string name="agenda">agenda</string>
    <string name="location_updateInterval_key">location_updateInterval_key</string>
    <string name="pich_picture_button">Pick picture button</string>
    <string name="latitude_longitude">Latitude: Longitude:</string>
    <string name="name">Name</string>
    <string name="menu_confirm">Confirm</string>
    <string name="vote_en_cours">Vote en cours</string>
    <string name="confirm_vote">Confirm Vote</string>
    <string name="place1">Place1</string>
    <string name="place3">Place3</string>
    <string name="place2">Place2</string>
    <string name="start_vote">Start Vote</string>
    <string name="create_event">Create Event</string>
    <string name="click_on_the_place_to_set_final_meeting">Click on the place to set final Meeting and go to Calendar Chooser</string>
    <string name="rating1">Rating1</string>
    <string name="wait_event">Wait for the manager to choose a Event Meeting</string>
    <string name="start">Start</string>

    <string name="more_info_on_meeting">More Info on Meeting</string>
    <string name="dev_cheat">Dev cheat</string>
    <string name="meeting_setup">Meeting Setup</string>
    <string name="starttime">StartTime</string>
    <string name="endtime">EndTime</string>
    <string name="date">Date</string>
    <string name="confirm">Confirm</string>
    <string name="meeting">Meeting :</string>

    <string name="enter_your_group_name">Enter your group name</string>
    <string name="tp2">TP2</string>
    <string name="change_username">Change username</string>
    <string name="quit">Quit</string>
    <string name="screenshot">ScreenShot</string>
    <string name="profile_picture">profile picture</string>
    <string name="quit_group">Quit Group</string>
    <string name="quir">Quit group</string>
    <string name="ok">Ok</string>
    <string name="event_exists">Event already exists</string>
    <string name="participate">Participate</string>
    <string name="maybe">Maybe</string>
    <string name="decline">Decline</string>
    <string name="passer_en_mode_conomie_d_nergie">Passer en mode économie d\'énergie</string>
    <string name="low_battery_icon">Low Battery Icon</string>
    <string name="battery_low">Battery Low</string>
    <string name="percent">%</string>
    <string name="event_exists_2">Event exist. No more vote allowed</string>
    <string name="not_manager">You are not the manager.</string>
    <string name="need_three_locs">Three locations to be marked. You have : </string>
    <string name="new_meeting">Meeting created</string>
    <string name="deniedPerm">permission denied, ...:(</string>
    <string name="permGranted">permission was granted, :)</string>
    <string name="youvoted">You already voted!</string>
    <string name="calendar">Calendar</string>
    <string name="calendar_open">Calendar opened</string>
    <string name="attention">Attention</string>
    <string name="mark_calendar">Mark meeting event on calendar (in preference top right button)</string>
    <string name="highlight_calendar">Highlight date on calendar?</string>

</resources>
