<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/map_content_meeting"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_on_the_place_to_set_final_meeting" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text|textLongMessage"
        android:hint="@string/more_info_on_meeting"
        android:ems="10"
        android:id="@+id/et_meeting_info" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:text="@string/place1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_meeting1"
            android:onClick="OnClickPlace"/>
        <TextView
            android:text="@string/rating1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewRating1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:text="@string/place1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_meeting2"
            android:onClick="OnClickPlace"/>
        <TextView
            android:text="@string/rating1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewRating2" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:text="@string/place1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_meeting3"
            android:onClick="OnClickPlace"/>
        <TextView
            android:text="@string/rating1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewRating3" />
    </LinearLayout>

</LinearLayout>