<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="inf8405_tp2.tp2.PlaceActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@color/cast_libraries_material_featurehighlight_text_header_color"
        android:id="@+id/imageView_place"
        tools:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:cropToPadding="false"
        android:adjustViewBounds="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_place_location"
        android:text="@string/latitude_longitude" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text|textPersonName"
        android:text="@string/name"
        android:ems="10"
        android:id="@+id/editText_place_name" />

    <Button
        android:text="@string/pich_picture_button"
        android:layout_width="match_parent"
        android:id="@+id/pich_picture"
        android:layout_height="wrap_content"
        android:onClick="onClickImage" />

    <Button
        android:text="@string/pich_picture_button"
        android:layout_width="match_parent"
        android:id="@+id/confirm_add_new_place"
        android:layout_height="wrap_content" />

</LinearLayout>
